test/conformance/chainsaw/image-validating-policies/standard/registry-egress-hard-block/metadata-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cel-registry-metadata
  labels:
    test.kyverno.io/registry-egress: "true"
spec:
  containers:
  - name: container
    image: 169.254.169.254/blocked:latest
