test/conformance/chainsaw/image-validating-policies/standard/registry-egress-hard-block/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-registry-egress-hard-block
spec:
  validationActions:
  - Deny
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
    objectSelector:
      matchLabels:
        test.kyverno.io/registry-egress: 'true'
  validations:
  - expression: 'true'
  matchImageReferences:
  - glob: '*'
  validationConfigurations:
    mutateDigest: false
    verifyDigest: false
    required: false
  attestors: []
